2006-12-15  Benoît Dejean  <benoit@placenet.org>

	* src/procman.h:
	* src/proctable.cpp:

	Packed a bit more ProcInfo.

2006-12-15  Benoît Dejean  <benoit@placenet.org>

	* src/Makefile.am:
	* src/callbacks.cpp:
	* src/callbacks.h:
	* src/disks.cpp:
	* src/disks.h:
	* src/favorites.c:
	* src/favorites.cpp:
	* src/interface.c:
	* src/interface.cpp:
	* src/interface.h:
	* src/load-graph.c:
	* src/load-graph.cpp:
	* src/load-graph.h:
	* src/lsof.cpp:
	* src/lsof.h:
	* src/memmaps.cpp:
	* src/memmaps.h:
	* src/openfiles.cpp:
	* src/openfiles.h:
	* src/prettytable.c:
	* src/prettytable.cpp:
	* src/procactions.c:
	* src/procactions.cpp:
	* src/procdialogs.c:
	* src/procdialogs.cpp:
	* src/procman.c:
	* src/procman.cpp:
	* src/procman.h:
	* src/procman_gksu.c:
	* src/procman_gksu.cpp:
	* src/procman_gnomesu.c:
	* src/procman_gnomesu.cpp:
	* src/proctable.c:
	* src/proctable.cpp:
	* src/selinux.h:
	* src/smooth_refresh.c:
	* src/smooth_refresh.cpp:
	* src/smooth_refresh.h:
	* src/sysinfo.cpp:
	* src/util.h:

	More C++ :)

2006-12-10  Benoît Dejean  <benoit@placenet.org>

	* src/Makefile.am:
	* src/disks.c:
	* src/disks.cpp:
	* src/disks.h:
	* src/openfiles.c:
	* src/openfiles.cpp:
	* src/openfiles.h:

	More C++.

2006-12-10  Benoît Dejean  <benoit@placenet.org>

	* src/Makefile.am:
	* src/callbacks.c:
	* src/callbacks.cpp:
	* src/callbacks.h:
	* src/util.c:
	* src/util.cpp:

	More C++.

2006-12-10  Benoît Dejean  <benoit@placenet.org>

	* src/Makefile.am:
	* src/selinux.c:
	* src/selinux.cpp:
	* src/selinux.h:
	* src/util.h:

	More C++. What a shame that we are still using CVS that can't
	track file moves.

2006-12-10  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/Makefile.am:
	* src/lsof.cpp:

	Stupid regular expression support.

2006-12-07  Benoît Dejean  <benoit@placenet.org>

	* src/sysinfo.cpp:

	Added missing include.
	Closes #383291.

2006-12-04  Benoît Dejean  <benoit@placenet.org>

	* help/C/gnome-system-monitor.xml: