@@ -1,3 +1,14 @@
+2006-12-16  Benoît Dejean  <benoit@placenet.org>
+
+	* src/prettytable.cpp:
+
+	Converted a lot of things to C++ using strongly typed map.
+
+	* src/util.h:
+
+	New function to ease string() + g_free.
+	Converted some macros to template.
+
 2006-12-15  Benoît Dejean  <benoit@placenet.org>
 
 	* src/procman.h:
